status bar implementation done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <button mat-button class="primary" (click)="askUserConfimation()">
   Ask Confimation
 </button>
+
+<app-status-bar></app-status-bar>
+
+<button mat-button (click)="onClickedMessage()">Show Message</button>
